# game-brave-soldier

./: CMakeLists.txt  README.md  map.txt  test  test.cpp
Header/: BaseObject.h  CommonFunc.h  MainObject.h  game_map.h  stdafx.h
images/map/: map (copy).txt  map.txt
src/: BaseObject.cpp  CommonFunc.cpp  MainObject.cpp  game_map.cpp  main copy.cpp  main.cpp
